# slides

./: .cspell.json  .gitignore  README.md  index.html  index.md  package-lock.json  package.json  reveal-md.json  reveal.json
.github/workflows/: publish.yml
.husky/: pre-commit
_assets/css/: custom.css
_assets/scripts/: custom-options.js  customize.js  load-plugins.js
css/: custom.css
number-string/: .cspell.json  number_string.html  number_string.md
number-string-core-cpp/: number_string.html
number-string-core-cpp/benchmarks/: dtoa-random.cpp
number-string-cpp-on-sea/: .cspell.json  number_string.html  number_string.md
number-string-cpp-on-sea/benchmarks/: conanfile.py  dtoa-random.cpp
number-string/benchmarks/: atod-digit.cpp  atoi.cpp
plugins/embed-code/: embed-code.js
predictable-guide-to-random/: random.html  random.md
presentation-ci/: .cspell.json  presentation_ci.html
presentation-ci-core-cpp/: .cspell.json  presentation_ci.html
presentation-ci-cpp-on-sea/: presentation_ci.html
ranges-status/: ranges.html  ranges.md
scripts/: customize.js  index-reader.js  load-plugins.js  preprocess.cjs  preprocess.js
slides/: index.md
slides/modern-js-addons/: accu.md  js_addons.md  modern-js-addons.css
slides/number-string/: .cspell.json  number-string.css  number_string.md
slides/number-string-core-cpp/: number_string.md
slides/number-string-cpp-on-sea/: elias_kosunen.jfif  number-string.css
slides/number-string-cpp-on-sea/benchmarks/: CMakeLists.txt  CMakePresets.json  atod-digit.cpp  atoi.cpp  itoa.cpp  itoa.json
slides/ranges-status/: .cspell.json  (+1 more)
slides/ranges_23/calendar/: CMakeLists.txt  Pipfile  calendar.cpp  chunk_by.hpp  closure.hpp  conanfile.txt  concat.hpp  expected.hpp  generator.hpp  join_with.hpp  print.hpp  repeat.hpp  zip_transform.hpp
test/: test_code_snippets.js
(+23 files in other folders)
